# transformers.rs

./: Cargo.toml  LICENSE  README.md
examples/app/: Cargo.toml
examples/app/src/: main.rs
src/: lib.rs  utils.rs
src/pipeline/: mod.rs
src/pipeline/tasks/: feature_extraction.rs  mod.rs  sentiment_analysis.rs  seq_to_seq.rs  task_io.rs  token_classification.rs  zero_shot_classification.rs
