[package]
name = "transformers-rs"
description = "."
version = "0.0.0"
edition = "2021"
authors = ["kallebysantos"]
license = "MIT"
repository = "https://github.com/kallebysantos/transformers.rs"
documentation = "https://docs.rs/transformers-rs"
categories = ["ai", "machine-learning"]
keywords = ["ai", "machine-learning", "onnx-runtime"]
readme = "./README.md"

[dependencies]
