[workspace]
members = [
  "examples/app"
]

[package]
name = "transformers-rs"
description = "."
version = "0.0.0"
edition = "2021"
authors = ["kallebysantos"]
license = "MIT"
repository = "https://github.com/kallebysantos/transformers.rs"
documentation = "https://docs.rs/transformers-rs"
categories = ["ai", "machine-learning"]
keywords = ["ai", "machine-learning", "onnx-runtime"]
readme = "./README.md"

[dependencies]
ndarray = "0.16.0"
ort = { git = "https://github.com/pykeio/ort", default-features = false, features = [ "ndarray", "half", "load-dynamic" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = ">=0.13.4", default-features = false, features = ["onig"] }
tokio = { version = "1.39.2", features = ["full"] }
